improved desktop design

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
       <div class="content-wrapper">
         <header class="heading-container container">
-          <h1 class="header">Simple Omelette</h1>
+          <h1 class="header">Simple Omelette Recipe</h1>
           <p>
-            Recipe An easy and quick dish, perfect for any meal. This classic
-            omelette combines beaten eggs cooked to perfection, optionally
-            filled with your choice of cheese, vegetables, or meats.
+            An easy and quick dish, perfect for any meal. This classic omelette
+            combines beaten eggs cooked to perfection, optionally filled with
+            your choice of cheese, vegetables, or meats.
           </p>
         </header>
 
