--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
           </p>
         </header>
 
-        <section class="preparation-container container">
+        <div class="preparation-container container">
           <p>Preparation time</p>
           <ul>
             <li><strong>Total:</strong>&nbspApproximately 10 minutes</li>
             <li><strong>Preparation:</strong>&nbsp5 minutes</li>
             <li><strong>Cooking:</strong>&nbsp5 minutes</li>
           </ul>
-        </section>
+        </div>
 
         <section class="ingredients-container container">
           <h2 class="header">Ingredients</h2>
