removed classes and used global approach

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </ul>
         </div>
 
-        <section class="ingredients-container container">
+        <section class="container">
           <h2 class="header">Ingredients</h2>
           <ul>
             <li>2-3 large eggs</li>
